2017-09-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9 final changes';git push
	git tag -a 4.6.9 -m 'CDF5, CMake, MPAS-O/I';git push --tags

	* Document NCO_PATH_OVERRIDE in ncclimo/ncremap screen output

2017-09-17  Charlie Zender  <zender@uci.edu>

	* Load ncl modules for cori, edison, rhea, titan only in ncremap not ncclimo

2017-09-16  Charlie Zender  <zender@uci.edu>

	* Update and auto-load ncl modules for cori, edison, rhea, titan

	* Fix ncremap bracket error

2017-09-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9-beta01 final changes';git push
	git tag -a 4.6.9-beta01 -m 'Documentation for release';git push --tags

	* Fix printing of CDL summary strings and RAM sizes

	* Turn-off var_lst_rx_xtr so ncclimo 4.6.9-alphaXX works with 4.6.8 binaries

	* Echo hardpath/NCO_PATH_OVERRIDE status as Config:

2017-09-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9-alpha05 final changes';git push
	git tag -a 4.6.9-alpha05 -m 'CMake hardening;CDF5 bug diagnosis;NCO_PATH_OVERRIDE';git push --tags

	* De-activate CDF5 workaround

	* If NCO_PATH_OVERRIDE is set to 'No' do not override user PATH with database of HPCC machine-dependent paths

	* Workaround fails because nc_close() hangs. Dang.

	* Implement CDF5 bug-workaround to use descending qsort on -v timeMonthly_avg_vertVelocityTop,timeMonthly_avg_normalVelocity

	* Deprecate ncks --get_grp_info, --get_file_info, -z (GET_LIST)

	* Modify trv_tbl_srt() to allow ascending and descending qsort()

2017-09-13  Charlie Zender  <zender@uci.edu>

	* Refine and test CDF5 diagnostics

	* CDL output ID = xxx in comments when dbg_lvl >= 2

	* Add/use nco_inq_path() to improve CDF5 diagnostics

2017-09-12  Charlie Zender  <zender@uci.edu>

	* Passes all expected regression tests
